updating front matter and section header

--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -7,8 +7,7 @@
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 
 \name{Kathryn Biegel} % Your name
-\address{2924 Harvey St., Apt. 5D \\ Madison, WI 53705} % Your address
-\address{(480)~$\cdot$~298~$\cdot$~9444 \\ kebiegel@wisc.edu} % Your phone number and email
+\address{(480)~$\cdot$~298~$\cdot$~9444 \\ kbiegel@anl.gov} % Your phone number and email
 
 \begin{document}
 
@@ -68,7 +67,7 @@ GPA: 4.3
 %	TECHNICAL STRENGTHS SECTION
 %----------------------------------------------------------------------------------------
 
-\begin{rSection}{Technical Strengths}
+\begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Programming and Modeling & MATLAB, Python, advanced MS Excel, Fortran 95 \\
