removing deprecated material, updating graduation date

--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -7,7 +7,7 @@
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 
 \name{Kathryn Biegel} % Your name
-\address{(480)~$\cdot$~298~$\cdot$~9444 \\ kbiegel@anl.gov} % Your phone number and email
+\address{(480)~$\cdot$~298~$\cdot$~9444 \\ kbiegel@anl.gov \\ github.com/biegelk} % Your phone number and email
 
 \begin{document}
 
@@ -35,7 +35,7 @@
 %------------------------------------------------
 
 \begin{rSubsection}{Massachusetts Institute of Technology, Prof. Scott Kemp}{June 2013 - June 2015}{Undergraduate Researcher}{Cambridge, MA}
-Developed MATLAB risk scenario model of new nuclear power plant construction projects to calculate the necessary expected profits from electricity sales needed to justify investment, considering project characteristics such as plant design, utility credit rating, and a historically-accurate spectrum of construction delays
+\item Developed MATLAB risk scenario model of new nuclear power plant construction projects to calculate the necessary expected profits from electricity sales needed to justify investment, considering project characteristics such as plant design, utility credit rating, and a historically-accurate spectrum of construction delays
 \end{rSubsection}
 
 \end{rSection}
@@ -47,15 +47,14 @@ Developed MATLAB risk scenario model of new nuclear power plant construction pro
 
 \begin{rSection}{Education}
 
-{\bf University of Wisconsin Madison} \hfill {\em anticipated: May 2021} \\
+{\bf University of Wisconsin Madison} \hfill {\em anticipated: June 2023} \\
 Ph.D. Student in Nuclear Engineering \\
-Research field: Statistical economic assessment of historical nuclear power plant construction projects; project management and design strategies to minimize fieldwork disruptions and overall project risk
+Research field: Agent-based modeling of electric power utility capital investment decisions
 \\
 
 {\bf Massachusetts Institute of Technology} \hfill {\em June 2015} \\ 
 B.S. in Nuclear Science and Engineering \\
-Research field: Construction Project Financial Evaluation and Risk Management \smallskip \\
-GPA: 4.3
+Research field: Construction project financial evaluation and risk management \smallskip \\
 
 \end{rSection}
 
@@ -70,12 +69,8 @@ GPA: 4.3
 \begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Programming and Modeling & MATLAB, Python, advanced MS Excel, Fortran 95 \\
-Writing & Technical, executive-oriented, layperson-oriented, regulatory \\
-Financial Analysis & Valuation, financial statement interpretation, Bloomberg \\
-Soft Skills & Public speaking, teaching, teamwork, leadership, \\
-& rapid self-teaching \\
-Miscellaneous & French (fluent), carpentry
+Item & Examples
+
 \end{tabular}
 
 \end{rSection}
