starting to repopulate the skills section

--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -63,13 +63,15 @@ Research field: Construction project financial evaluation and risk management \s
 
 
 %----------------------------------------------------------------------------------------
-%	TECHNICAL STRENGTHS SECTION
+%	SKILLS SECTION
 %----------------------------------------------------------------------------------------
 
 \begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Item & Examples
+Programming & Python, Julia, bash, git, Linux
+MS Excel & Modeling, Data Analysis, Templating/UI/Entry Validation
+MS Powerpoint & Technical/executive/layperson communication, Infographics
 
 \end{tabular}
 
