--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -6,7 +6,7 @@
 
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 
-\name{Kathryn Biegel} % Your name
+\name{Katie Biegel} % Your name
 \address{(480)~$\cdot$~298~$\cdot$~9444 \\ kbiegel@anl.gov \\ github.com/biegelk} % Your phone number and email
 
 \begin{document}
