fixing table syntax

--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -4,6 +4,7 @@
 
 \documentclass{resume} % Use the custom resume.cls style
 
+\usepackage{hyperref}
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 
 \name{Katie Biegel} % Your name
@@ -69,9 +70,9 @@ Research field: Construction project financial evaluation and risk management \s
 \begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Programming & Python, Julia, bash, git, Linux
-MS Excel & Modeling, Data Analysis, Templating/UI/Entry Validation
-MS Powerpoint & Technical/executive/layperson communication, Infographics
+Programming & Python, Julia, bash, git, Linux \\
+MS Excel & Modeling, Data Analysis, Templating/UI/Entry Validation \\
+MS Powerpoint & Technical/executive/layperson communication, Infographics \\
 
 \end{tabular}
 
