standardizing skills caps/punctuation

--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -70,10 +70,9 @@ Research field: Construction project financial evaluation and risk management \s
 \begin{rSection}{Skills}
 
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Programming & Python, Julia, bash, git, Linux \\
-MS Excel & Modeling, Data Analysis, Templating/UI/Entry Validation \\
-MS Powerpoint & Technical/executive/layperson communication, Infographics \\
-
+Programming & Python; Julia; bash; git; Linux; SQLite \\
+MS Excel & modeling; data analysis; templating/UI/entry validation \\
+MS Powerpoint & technical/executive/layperson communication; infographics \\
 \end{tabular}
 
 \end{rSection}
