added CNC state subsidy model

--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -18,6 +18,22 @@
 
 \begin{rSection}{Work Experience}
 
+\begin{rSubsection}{Argonne National Laboratory}{September 2018 -- present}{Graduate Researcher}{Lemont, IL}
+  \item Developed ABCE
+\end{rSubsection}
+
+\begin{rSubsection}{Civil Nuclear Credit Program}{July 2022 -- present}{Technical Analyst}{Lemont, IL}
+  \item Developed an extensive Excel model of state and federal nuclear energy subsidies at the request of Civil Nuclear Credit (CNC) Program leadership, (based solely on publicly-available information)
+  \begin{list}{}
+    \item Characterized state nuclear subsidy programs (CT, NY, NJ, IL): structure, compensation levels, terms and conditions
+    \item Characterized nuclear production tax credit (PTC) introduced in the Inflation Reduction Act of 2022
+    \item Developed an approximate operating profit model for all operating nuclear reactor units in the U.S. (as of August 2022)
+    \item Modeled nuclear reactor units' economic performance with and without state subsidies
+  \end{list}
+  \item Wrote and presented a white paper on subsidy model results to CNC leadership
+  \item Ongoing updates to model and analysis
+\end{rSubsection}
+
 \begin{rSubsection}{Energy Consulting Manager}{July 2015 - July 2017}{PowerAdvocate, Inc.}{Boston, MA}
   \setlength{\itemsep}{-5pt}
   \item Lead analyst on project for price/strategic behavioral modeling of oilfield services firms in response to commodity prices, macroeconomic indicators, petroleum/natural gas extraction statistics, and other market forces
