fixing up whitespace

--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -7,7 +7,7 @@
 \usepackage{hyperref}
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 
-\name{Katie Biegel} % Your name
+\name{K a t i e \:\: B i e g e l} % Your name
 \address{(480)~$\cdot$~298~$\cdot$~9444 \\ kbiegel@anl.gov \\ github.com/biegelk} % Your phone number and email
 
 \begin{document}
@@ -19,18 +19,20 @@
 \begin{rSection}{Work Experience}
 
 \begin{rSubsection}{PowerAdvocate, Inc}{July 2015 - July 2017}{Energy Consulting Manager}{Boston, MA}
-\item Lead analyst on project for price/strategic behavioral modeling of oilfield services firms in response to commodity prices, macroeconomic indicators, petroleum/natural gas extraction statistics, and other market forces
-\begin{list}{}
-\item Led team of four people on \$100k pilot engagement which resulted in expanded client relationship
-\item Determined optimal multivariate regression modeling methodology and instructed team in statistical methods
-\item Conducted extensive qualitative and quantitative market research to identify potential expected behavior patterns for further research and validate our results against observed industry trends
-\end{list}
-\item Developed comprehensive decision-making priority matrix for client considering replacing long-time, poorly-performing construction partner firm for capital asset build-out program of nearly \$10B over 10 years
-\begin{list}{}
-\item Self-studied discounted cash flow valuation method and wrote valuation model of client firm, incorporating variable cost impacts from utilization of original and candidate construction partners
-\item Researched regulatory and rate-setting processes in client's jurisdiction in order to estimate impacts of high construction cost unpredictability on regulatory burden
-\item Authored evidentiary documents in defense of this and other work performed for the same client, which was submitted in support of client's rate case hearing; successfully disproved faulty opposing arguments and persuaded regulatory commission to decide in client's favor on points in question
-\end{list}
+  \setlength{\itemsep}{-5pt}
+  \item Lead analyst on project for price/strategic behavioral modeling of oilfield services firms in response to commodity prices, macroeconomic indicators, petroleum/natural gas extraction statistics, and other market forces
+  \begin{itemize}
+    \item Led team of four people on \$100k pilot engagement which resulted in expanded client relationship
+    \item Determined optimal multivariate regression modeling methodology and instructed team in statistical methods
+    \item Conducted extensive qualitative and quantitative market research to identify potential expected behavior patterns for further research and validate our results against observed industry trends
+  \end{itemize}
+  \item Developed comprehensive decision-making priority matrix for client considering replacing long-time, poorly-performing construction partner firm for capital asset build-out program of nearly \$10B over 10 years
+  \begin{itemize}
+    \setlength{\itemsep}{-5pt}
+    \item Self-studied discounted cash flow valuation method and wrote valuation model of client firm, incorporating variable cost impacts from utilization of original and candidate construction partners
+    \item Researched regulatory and rate-setting processes in client's jurisdiction in order to estimate impacts of high construction cost unpredictability on regulatory burden
+    \item Authored evidentiary documents in defense of this and other work performed for the same client, which was submitted in support of client's rate case hearing; successfully disproved faulty opposing arguments and persuaded regulatory commission to decide in client's favor on points in question
+  \end{itemize}
 \end{rSubsection}
 
 %------------------------------------------------
