swapping institution and position names in work experience

--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -18,7 +18,7 @@
 
 \begin{rSection}{Work Experience}
 
-\begin{rSubsection}{PowerAdvocate, Inc}{July 2015 - July 2017}{Energy Consulting Manager}{Boston, MA}
+\begin{rSubsection}{Energy Consulting Manager}{July 2015 - July 2017}{PowerAdvocate, Inc.}{Boston, MA}
   \setlength{\itemsep}{-5pt}
   \item Lead analyst on project for price/strategic behavioral modeling of oilfield services firms in response to commodity prices, macroeconomic indicators, petroleum/natural gas extraction statistics, and other market forces
   \begin{itemize}
@@ -37,7 +37,7 @@
 
 %------------------------------------------------
 
-\begin{rSubsection}{Massachusetts Institute of Technology, Prof. Scott Kemp}{June 2013 - June 2015}{Undergraduate Researcher}{Cambridge, MA}
+\begin{rSubsection}{Undergraduate Researcher}{June 2013 - June 2015}{Massachusetts Institute of Technology, Prof. Scott Kemp}{Cambridge, MA}
 \item Developed MATLAB risk scenario model of new nuclear power plant construction projects to calculate the necessary expected profits from electricity sales needed to justify investment, considering project characteristics such as plant design, utility credit rating, and a historically-accurate spectrum of construction delays
 \end{rSubsection}
 
