changing headers to Futura Light

--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -38,7 +38,7 @@
 %------------------------------------------------
 
 \begin{rSubsection}{Undergraduate Researcher}{June 2013 - June 2015}{Massachusetts Institute of Technology, Prof. Scott Kemp}{Cambridge, MA}
-\item Developed MATLAB risk scenario model of new nuclear power plant construction projects to calculate the necessary expected profits from electricity sales needed to justify investment, considering project characteristics such as plant design, utility credit rating, and a historically-accurate spectrum of construction delays
+  \item Developed MATLAB risk scenario model of new nuclear power plant construction projects to calculate the necessary expected profits from electricity sales needed to justify investment, considering project characteristics such as plant design, utility credit rating, and a historically-accurate spectrum of construction delays
 \end{rSubsection}
 
 \end{rSection}
@@ -50,14 +50,13 @@
 
 \begin{rSection}{Education}
 
-{\bf University of Wisconsin Madison} \hfill {\em anticipated: June 2023} \\
-Ph.D. Student in Nuclear Engineering \\
-Research field: Agent-based modeling of electric power utility capital investment decisions
-\\
+\begin{rSubsection}{Doctoral Candidate in Nuclear Engineering}{anticipated: June 2023}{University of Wisconsin -- Madison, Department of Engineering Physics}{Madison, WI}
+  \item Research field: Agent-based modeling of electric power utility capital investment decisions
+\end{rSubsection}
 
-{\bf Massachusetts Institute of Technology} \hfill {\em June 2015} \\ 
-B.S. in Nuclear Science and Engineering \\
-Research field: Construction project financial evaluation and risk management \smallskip \\
+\begin{rSubsection}{Bachelor of Science in Nuclear Science and Engineering}{June 2015}{Massachusetts Institute of Technology, Department of Nuclear Science and Engineering}{Cambridge, MA}
+  \item Senior thesis: construction project financial evaluation and risk management
+\end{rSubsection}
 
 \end{rSection}
 
@@ -71,7 +70,7 @@ Research field: Construction project financial evaluation and risk management \s
 
 \begin{rSection}{Skills}
 
-\begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
+\begin{tabular}{ @{} >{\large}l @{\hspace{6ex}} l }
 Programming & Python; Julia; bash; git; Linux; SQLite \\
 MS Excel & modeling; data analysis; templating/UI/entry validation \\
 MS Powerpoint & technical/executive/layperson communication; infographics \\
