updating ANL work

--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -5,7 +5,7 @@
 \documentclass{resume} % Use the custom resume.cls style
 
 \usepackage{hyperref}
-\usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry} % Document margins
+\usepackage[left=0.75in,top=0.5in,right=0.75in,bottom=0.6in]{geometry} % Document margins
 
 \name{K a t i e \:\: B i e g e l} % Your name
 \address{(480)~$\cdot$~298~$\cdot$~9444 \\ kbiegel@anl.gov \\ github.com/biegelk} % Your phone number and email
@@ -18,20 +18,33 @@
 
 \begin{rSection}{Work Experience}
 
-\begin{rSubsection}{Argonne National Laboratory}{September 2018 -- present}{Graduate Researcher}{Lemont, IL}
-  \item Developed ABCE
-\end{rSubsection}
+\begin{rSubsection}{Graduate Researcher}{September 2018 -- present}{Argonne National Laboratory}{Lemont, IL}
+  \item ABCE
 
-\begin{rSubsection}{Civil Nuclear Credit Program}{July 2022 -- present}{Technical Analyst}{Lemont, IL}
-  \item Developed an extensive Excel model of state and federal nuclear energy subsidies at the request of Civil Nuclear Credit (CNC) Program leadership, (based solely on publicly-available information)
-  \begin{list}{}
-    \item Characterized state nuclear subsidy programs (CT, NY, NJ, IL): structure, compensation levels, terms and conditions
-    \item Characterized nuclear production tax credit (PTC) introduced in the Inflation Reduction Act of 2022
-    \item Developed an approximate operating profit model for all operating nuclear reactor units in the U.S. (as of August 2022)
+  \item Technical Analyst for the Civil Nuclear Credit Program: developed an operating profit model for all U.S. commercial nuclear reactor units adjusting for state and federal nuclear energy subsidies (based solely on publicly-available information)
+  \begin{itemize}
+    \item Researched and modeled state nuclear subsidy programs (CT, NY, NJ, IL): structure, compensation levels, terms and conditions
+    \item Researched and modeled nuclear production tax credit (PTC) introduced in the Inflation Reduction Act of 2022
     \item Modeled nuclear reactor units' economic performance with and without state subsidies
-  \end{list}
-  \item Wrote and presented a white paper on subsidy model results to CNC leadership
-  \item Ongoing updates to model and analysis
+  \end{itemize}
+
+  \item Techno-economic modeling of coal-to-nuclear conversion projects
+  \begin{itemize}
+    \item Characterized project structure
+    \item Final report:
+  \end{itemize}
+
+  \item Other projects and publications
+  % TODO: get dates and links for all of these
+  \begin{itemize}
+    \item Impact of electric vehicle power demand and charging schedules on electricity markets and nuclear generators
+%    \item Risks of market-driven closures of nuclear power plants
+    \item Agent-based next-generation capacity expansion and dispatch models for electricity market analysis
+    \item February 2021 Electricity Blackouts and Natural Gas Shortages in Texas
+    \item Report on reuse of decommissioned nuclear assets
+    \item Economic impacts of nuclear power plant load-following capabilities
+  \end{itemize}
+
 \end{rSubsection}
 
 \begin{rSubsection}{Energy Consulting Manager}{July 2015 - July 2017}{PowerAdvocate, Inc.}{Boston, MA}
