resetting subsection headers to base font

--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -23,7 +23,7 @@
     \begin{itemize}
       \setlength{\itemsep}{-3pt}
       \item \textbf{Skill highlights: Python, Julia, SQLite, automated Excel templating, git/software development}
-      \item Developing the ABCE code, which simulates generation asset investment decisions of independing utility companies competing in a wholesale electricity market
+      \item Developing the ABCE code, which simulates generation asset investment decisions of independent utility companies competing in a wholesale electricity market
         \begin{itemize}
           \item Agents attempt to maximize their own generation portfolio's valuation via new construction projects and asset retirements
           \item Agents make financial projections based on public information and their internal expectations about future events, using their own private models of future electricity market outcomes and full pro-forma company financial statements
