--- a/resume.cls
+++ b/resume.cls
@@ -99,7 +99,7 @@
 % Defines the rSection environment for the large sections within the CV
 \newenvironment{rSection}[1]{ % 1 input argument - section name
   \sectionskip
-  {\futuralight \MakeUppercase{\Large #1}} % Section title
+  {\futuralight \MakeUppercase{\LARGE #1}} % Section title
   \sectionlineskip
   \hrule % Horizontal line
   \begin{list}{}{ % List for each individual item in the section
@@ -115,7 +115,7 @@
 %----------------------------------------------------------------------------------------
 
 \newenvironment{rSubsection}[4]{ % 4 input arguments - company name, year(s) employed, job title and location
-  {\futuralight {\Large #1} \hfill {#2} % Increase font size of position name, and align date to the right
+  {{\Large #1} \hfill {\large #2} % Increase font size of position name, and align date to the right
     \ifthenelse{\equal{#3}{}}{}{ % If the third argument is not specified, don't print the institution and location line
     \\
     {\large #3} \hfill {\large #4} % Italic institution name and location
