adding C2N and CNC links

--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -32,7 +32,7 @@
       \item Developed flexible data structures and interfaces to allow bidirectional ABCE coupling with external codes
     \end{itemize}
 
-  \item \textbf{Technical analyst} for the Civil Nuclear Credit (CNC) Program
+  \item \textbf{Technical analyst} for the \href{https://www.energy.gov/gdo/civil-nuclear-credit-program}{Civil Nuclear Credit (CNC) Program}
   \begin{itemize}
     \setlength{\itemsep}{-3pt}
     \item \textbf{Skill highlights: Excel modeling, economic modeling, literature review, executive stakeholder communication}
@@ -42,7 +42,7 @@
     \item Wrote 12-page analysis summary report to brief CNC leadership, to provide context before the first CNC award cycle
   \end{itemize}
 
-  \item \textbf{Technoeconomic analyst} for a Department of Energy coal-to-nuclear transitions report
+  \item \textbf{Technoeconomic analyst} for a \href{https://fuelcycleoptions.inl.gov/SiteAssets/SitePages/Home/C2N2022Report.pdf}{Department of Energy coal-to-nuclear transitions report}
   \begin{itemize}
     \setlength{\itemsep}{-3pt}
     \item \textbf{Skill highlights: ABCE, literature review}
