--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -19,7 +19,7 @@
 \begin{rSection}{Work Experience}
 
 \begin{rSubsection}{Graduate Researcher}{September 2018 -- present}{Argonne National Laboratory}{Lemont, IL}
-  \item \textbf{Lead developer} for the Agent-Based Capacity Expansion (ABCE) code
+  \item \textbf{Creator and lead developer} for the Agent-Based Capacity Expansion (ABCE) code
     \begin{itemize}
       \setlength{\itemsep}{-3pt}
       \item \textbf{Skill highlights: Python, Julia, SQLite, automated Excel templating, git/software development}
@@ -27,7 +27,7 @@
         \begin{itemize}
           \item Agents attempt to maximize their own generation portfolio's valuation via new construction projects and asset retirements
           \item Agents make financial projections based on public information and their internal expectations about future events, using their own private models of future electricity market outcomes and full pro-forma company financial statements
-          \item Feasible behaviors are limited by agents' evolving ability to issue financing instruments, which are issued in real time and tracked on continuously-updated debt schedules
+          \item Feasible behaviors are limited by agents' evolving ability to issue financing instruments, which are issued in real time and tracked on continuously updated debt schedules
         \end{itemize}
       \item Developed flexible data structures and interfaces to allow bidirectional ABCE coupling with external codes
     \end{itemize}
@@ -37,7 +37,7 @@
     \setlength{\itemsep}{-3pt}
     \item \textbf{Skill highlights: Excel modeling, economic modeling, literature review, executive stakeholder communication}
     \item Developed an Excel operating profit model (based solely on public information) for all U.S. commercial nuclear reactor units, to analyze the impacts of state and federal subsidy programs and variations in revenue and cost levels
-    \item Researched and modeled state nuclear subsidy programs (CT, NY, NJ, IL) and federal production tax credit introduced in the Inflation Reduction Act (2022): structure, compensation levels, terms and conditions
+    \item Researched and modeled state nuclear subsidy programs (CT, NY, NJ, IL) and the federal production tax credit introduced in the Inflation Reduction Act (2022): structure, compensation levels, terms and conditions
     \item Performed sensitivity analyses on assumptions to provide context and more robust conclusions
     \item Wrote 12-page analysis summary report to brief CNC leadership, to provide context before the first CNC award cycle
   \end{itemize}
@@ -47,9 +47,9 @@
     \setlength{\itemsep}{-3pt}
     \item \textbf{Skill highlights: ABCE, literature review}
     \item Developed conceptual and quantitative models of technoeconomic factors affecting feasibility of coal-to-nuclear conversion projects
-    \item Developed exemplar project schedules for all project types to model the critical economic impacts of the "revenue gap" (unavoidable zero-revenue period between CPP shutdown and NPP startup on the same site, mandatory in some projects due to equipment refurbishment and/or site remediation)
+    \item Developed exemplar project schedules for all project types to model the critical economic impacts of the ``revenue gap" (unavoidable zero-revenue period between coal plant shutdown and nuclear plant startup on the same site, mandatory in some projects due to equipment refurbishment and/or site remediation)
     \item Developed models of activities and costs required to decommission CPPs and manage coal waste facilities
-    \item Used ABCE to model decision drivers and utility firms' preferences among possible types of CPP-to-NPP conversion projects
+    \item Used ABCE to model decision drivers and utility firms' preferences among possible types of coal-to-nuclear conversion projects
   \end{itemize}
 
   \item \textbf{Other projects and publications}
@@ -93,7 +93,7 @@
 
 \begin{rSection}{Education}
 
-\begin{rSubsection}{Doctoral Candidate in Nuclear Engineering}{August 2017 -- June 2023 (anticipated)}{University of Wisconsin -- Madison, Department of Engineering Physics}{Madison, WI}
+\begin{rSubsection}{Doctoral Candidate in Nuclear Engineering}{August 2017 -- June 2023 (anticipated)}{University of Wisconsin--Madison, Department of Engineering Physics}{Madison, WI}
   \item Advisors: Paul P. H. Wilson (UW--Madison); Nicolas Stauff (Argonne National Laboratory)
 \end{rSubsection}
 
