added final links and set link color to blue

--- a/biegel_resume.tex
+++ b/biegel_resume.tex
@@ -4,11 +4,19 @@
 
 \documentclass{resume} % Use the custom resume.cls style
 
-\usepackage{hyperref}
 \usepackage[left=0.75in,top=0.75in,right=0.75in,bottom=0.75in]{geometry} % Document margins
 
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks=true,
+    linkcolor=blue,
+    urlcolor=blue,
+    pdftitle={Biegel resume}
+    pdfpagemode=FullScreen
+}
+
 \name{K a t i e \:\: B i e g e l} % Your name
-\address{(480)~$\cdot$~298~$\cdot$~9444 \\ kbiegel@anl.gov \\ github.com/biegelk} % Your phone number and email
+\address{(480)~$\cdot$~298~$\cdot$~9444 \\ kbiegel@anl.gov } % Your phone number and email
 
 \begin{document}
 
@@ -39,10 +47,10 @@
     \item Developed an Excel operating profit model (based solely on public information) for all U.S. commercial nuclear reactor units, to analyze the impacts of state and federal subsidy programs and variations in revenue and cost levels
     \item Researched and modeled state nuclear subsidy programs (CT, NY, NJ, IL) and the federal production tax credit introduced in the Inflation Reduction Act (2022): structure, compensation levels, terms and conditions
     \item Performed sensitivity analyses on assumptions to provide context and more robust conclusions
-    \item Wrote 12-page analysis summary report to brief CNC leadership, to provide context before the first CNC award cycle
+    \item Wrote 12-page analysis summary report for CNC leadership before the first CNC award cycle
   \end{itemize}
 
-  \item \textbf{Technoeconomic analyst} for a \href{https://fuelcycleoptions.inl.gov/SiteAssets/SitePages/Home/C2N2022Report.pdf}{Department of Energy coal-to-nuclear transitions report}
+  \item \textbf{Technoeconomic analyst} for the \href{https://www.energy.gov/ne/articles/doe-report-finds-hundreds-retiring-coal-plant-sites-could-convert-nuclear}{Department of Energy coal-to-nuclear transitions report}
   \begin{itemize}
     \setlength{\itemsep}{-3pt}
     \item \textbf{Skill highlights: ABCE, literature review}
@@ -53,12 +61,10 @@
   \end{itemize}
 
   \item \textbf{Other projects and publications}
-  % TODO: get dates and links for all of these
   \begin{itemize}
-    \item Impact of electric vehicle power demand/charging schedules on electricity markets and nuclear generators
-    \item February 2021 electricity blackouts and natural gas shortages in Texas
-    \item Economic impacts of nuclear power plant load-following capabilities
-    \item Report on reuse of decommissioned nuclear assets
+    \item \href{https://www.osti.gov/biblio/1891624}{Impact of electric vehicle charging schedules on electricity markets and nuclear generators (Sept. 2022)}
+    \item \href{https://www.osti.gov/biblio/1822217}{February 2021 electricity blackouts and natural gas shortages in Texas (July 2021)}
+    \item \href{https://www.osti.gov/biblio/1701718}{Economic impacts of nuclear power plant load-following capabilities (Sept. 2020)}
   \end{itemize}
 
 \end{rSubsection}
